# gnome-pomodoro

./: .editorconfig  .eslintrc.yml  .gitignore  Makefile  Makefile.am  Makefile.include  NEWS  README-pt_BR.md  README.md  autogen.sh  config.vapi  configure.ac  extension.mk  focus-timer.doap  gnome-pomodoro.doap  gnome-pomodoro.spec  gnome_shell_pomodoro.json  io.github.focustimerhq.FocusTimer.Devel.json  meson-post-install.sh  meson.build  meson_options.txt  org.gnome.Pomodoro.json  org.gnome.shell.extensions.pomodoro.gschema.xml.in  org.gnomepomodoro.Pomodoro.Devel.json  org.gnomepomodoro.Pomodoro.json  run-vala-lint.sh
data/: Makefile.am  gnome-pomodoro.7  gnome-pomodoro.desktop.in  gnome-pomodoro.gresource.xml  gnome-pomodoro.sgml  gnome-shell-pomodoro.desktop.in  gtk-style.css  io.github.focustimerhq.FocusTimer.Session.xml  io.github.focustimerhq.FocusTimer.Timer.xml  io.github.focustimerhq.FocusTimer.desktop.in.in  io.github.focustimerhq.FocusTimer.gschema.xml  io.github.focustimerhq.FocusTimer.metainfo.xml.in  io.github.focustimerhq.FocusTimer.service.in  io.github.focustimerhq.FocusTimer.xml  meson.build  org.gnome.Pomodoro.appdata.xml  org.gnome.Pomodoro.appdata.xml.in  org.gnome.Pomodoro.desktop.in  org.gnome.Pomodoro.service.in  org.gnome.pomodoro.gschema.xml  org.gnome.pomodoro.gschema.xml.in  org.gnome.shell.extensions.pomodoro.gschema.xml.in  org.gnomepomodoro.Pomodoro.Session.xml  org.gnomepomodoro.Pomodoro.Timer.xml  org.gnomepomodoro.Pomodoro.appdata.xml.in  org.gnomepomodoro.Pomodoro.desktop.in  org.gnomepomodoro.Pomodoro.desktop.in.in  org.gnomepomodoro.Pomodoro.gschema.xml  org.gnomepomodoro.Pomodoro.metainfo.xml.in  org.gnomepomodoro.Pomodoro.service.in  org.gnomepomodoro.Pomodoro.xml
data/icons/: Makefile.am  meson.build
data/resources/: compact-timer-view.ui  install-extension-dialog.ui  menu.ui  menus.ui  meson.build  preferences-keyboard-shortcut-page.ui  preferences-main-page.ui  preferences-plugins-page.ui  preferences.ui  resources.xml  screen-notification.ui  stats-lifetime-page.ui  stats-page.ui  stats-today-page.ui  stats-view.ui  style.css  timer-control-buttons.ui  timer-label.ui  timer-view.ui  window.ui
data/sounds/: Makefile.am  meson.build
egg-list-box/: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  egg-list-box-uninstalled.pc.in  egg-list-box.c  egg-list-box.doap  egg-list-box.h  egglistbox.vapi  test-focus.c  test-list.vala  test-scrolled.vala  test-sel.c
extension/: Makefile.am  config.js.in  dbus.js  dialogs.js  extension.js  indicator.js  metadata.json.in  notification.js  notifications.js  presence.js  settings.js  stylesheet.css  tasklist.js  timer.js  utils.js
lib/: Makefile.am  about-dialog.vala  accelerator.vala  aggregated-entry.vala  animation.vala  application.vala  capability-group.vala  capability-manager.vala  capability.vala  command-line.vala  desktop-extension.vala  desktop.vala  entry.vala  enum-combo-box.vala  gnome-desktop-module.vala  gnome-desktop.vala  gnome-pomodoro.gresource.xml  gnome-session-manager-plugin.vala  gnome-session-manager.vala  keybinding-chooser-button.vala  keybindings.vala  log-scale.vala  main-window.vala  meson.build  mode-button.vala  module.vala  notifications-capability.vala  plugin-manager-dialog.vala  plugin-manager.vala  plugin.vala  power.vala  preferences-dialog.vala  presence-module.vala  presence-plugin.vala  presence.vala  screen-notification.vala  screensaver-module.vala  screensaver.vala  service.vala  settings.vala  (+14 more)
lib/models/: aggregated-entry.vala  entry.vala
lib/resources/: gtk-style.css  resources.xml
lib/widgets/: calendar-button.vala  symbolic-button.vala  toolbar.vala
man/: Makefile.am  gnome-pomodoro.sgml
plugins/actions/: Makefile.am  action-listboxrow.vala  action-page.vala  action.vala  actions.plugin  actions.vala  enums.vala  meson.build  org.gnome.pomodoro.plugins.actions.gschema.xml  org.gnomepomodoro.Pomodoro.plugins.actions.gschema.xml  preferences-page.ui  preferences-page.vala
plugins/builtin/: Makefile.am  meson.build  notifications-plugin.vala  notifications.plugin  sound-player.vala  sounds-plugin.vala  sounds.plugin
plugins/dark-theme/: Makefile.am  dark-theme-plugin.vala  meson.build
plugins/gnome/: GnomeDesktop-3.0.metadata  Makefile.am  gnome-desktop-3.0.deps  gnome-desktop-3.0.vapi  gnome-hacks.c  gnome-hacks.h  (+9 more)
src/: Makefile-js.am  Makefile.am  about-dialog.vala  accelerator.vala  aggregated-entry.vala  aligned-stack.vala  animation.vala  application.js  application.vala  capability-manager.vala  command-line.vala  compact-timer-view.vala  config.js.in  cycle.vala  database.vala  dbus-services.vala  dbus.js  desktop-extension.vala  entry.vala  extension.js  freedesktop.vala  gnome-pomodoro.deps  gnome-pomodoro.gresource.xml  gnome-shell-pomodoro.in  io.github.focustimerhq.FocusTimer.gresource.xml  keybindings.vala  log-scale.vala  main-window.vala  main.js  main.vala  mainWindow.js  meson.build  metadata.json  metadata.json.in  monospace-label.vala  notification.js  notifications-capability.vala  org.gnomepomodoro.Pomodoro.gresource.xml  power.vala  preferences-dialog.vala  (+50 more)
tests/: Makefile.am  common.vala  meson.build  test-action-manager.vala  test-application.vala  test-capability-group.vala  test-capability-manager.vala  test-capability-set.vala  test-capability.vala  test-command.vala  test-cycle.vala  test-database.vala  test-event-bus.vala  test-event-producer.vala  test-expression-parser.vala  test-expression.vala  test-job-queue.vala  test-matrix.vala  test-notification-manager.vala  test-provided-object.vala  test-provider-set.vala  test-scheduler.vala  test-session-manager-strategy.vala  test-session-manager.vala  test-session.vala  test-stats-manager.vala  test-time-block.vala  test-timer-view-action-group.vala  test-timer.vala  test-timestamp.vala  test-timezone-history.vala  test-utils.vala  test-virtual-capability.vala  tests.vala
vapi/: Gio-2.0.metadata  GnomeDesktop-3.0.metadata  Gom-1.0.metadata  Makefile.am  UPowerGlib-1.0.metadata  config.vapi  gom-1.0.deps  gom-1.0.vapi  libcanberra.vapi
(+434 files in other folders)
